--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 PORT=port_server_is_running
 DATABASE=postgres://postgres:db_password@db_host:db_port/db_database
+ACCESS_TOKEN_SECRET_KEY=some_secret_key
+ACCESS_TOKEN_EXP=some_time
